--- a/demo.toml
+++ b/demo.toml
@@ -1,5 +1,6 @@
 name="gate"
 type=1
+index=1
 
 [server]
 ip="0.0.0.0"
@@ -9,15 +10,12 @@ port=4567
 cnt = -1
 
 
-[[nats]]
-host="127.0.0.1"
-port=4222
-pubs = [""]
 
 [[nats]]
+name="nats1"
 host="127.0.0.1"
 port=4222
-pubs = [""]
+subs = ["all.all.id.*","gate.1.id.*"]
 
 
 [[dbs]]
