remake server session msg handle method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ FILE(GLOB SESSION_SRC Session/*.h Session/*.hpp Session/*.cpp)
 
 set(BS_SRC 
     WrappedMessage.hpp
+    WrappedMessage.cpp
     MessagePool.h
     #MessagePool.cpp
     Msg.def.h
