make windows compile pass

--- a/demos/central/CMakeLists.txt
+++ b/demos/central/CMakeLists.txt
@@ -5,3 +5,8 @@ set(src centralserver.h centralserver.cpp central.toml)
 add_executable(centralserver ${src})
 
 target_link_libraries(centralserver BaseServer uv::uv-static protobuf::libprotobuf-lite)
+
+if(WIN32)
+set_property(TARGET centralserver PROPERTY
+  MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+ENDIF(WIN32)
