websocket client 测试

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -3,4 +3,5 @@ project(DEMOS)
 add_subdirectory(gate)
 add_subdirectory(central)
 add_subdirectory(login)
-add_subdirectory(user)
+#add_subdirectory(user)
+add_subdirectory(clientdemo)
