--- a/demos/central/CMakeLists.txt
+++ b/demos/central/CMakeLists.txt
@@ -4,7 +4,7 @@ set(src centralserver.h centralserver.cpp central.toml)
 
 add_executable(centralserver ${src})
 
-target_link_libraries(centralserver BaseServer uv::uv-static protobuf::libprotobuf-lite)
+target_link_libraries(centralserver BaseServer uv::uv-static protobuf::libprotobuf-lite mysqlclient)
 
 if(WIN32)
 set_property(TARGET centralserver PROPERTY
