--- a/demos/gate/CMakeLists.txt
+++ b/demos/gate/CMakeLists.txt
@@ -4,8 +4,11 @@ set(src gateserver.h gateserver.cpp gate.toml)
 find_package(libmysql)
 add_executable(gateserver ${src})
 
-target_link_libraries(gateserver BaseServer uv::uv-static protobuf::libprotobuf-lite libmysql)
+
 if(WIN32)
+    target_link_libraries(gateserver BaseServer uv::uv-static protobuf::libprotobuf-lite libmysql)
 set_property(TARGET gateserver PROPERTY
   MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+else()
+    target_link_libraries(gateserver BaseServer uv::uv-static protobuf::libprotobuf-lite mysqlclient)
 ENDIF(WIN32)
