--- a/demo.toml
+++ b/demo.toml
@@ -1,6 +1,8 @@
 name="gate"
 type=1
 index=1
+unique_id = "gate.1"
+
 
 [server]
 ip="0.0.0.0"
@@ -13,7 +15,7 @@ cnt = -1
 host="127.0.0.1"
 port=4222
 subs = ["all.all.id.*","gate.1.system.id.*"]
-
+queue_sub="gate.queue.id.*"
 
 [[nats]]
 name="system"
